Page template con navegación lateral

--- a/less/giornata.less
+++ b/less/giornata.less
@@ -35,3 +35,10 @@ p {
 .alto-xs {
 	height: auto !important;
 }
+
+#post {
+	background: url(../img/ruido-fondo-pyxis.png) repeat center;
+}
+.nav-ead {
+	background: url(../img/ruido-fondo-pyxis.png) repeat center;	
+}
