Portadilla carrera + shortcode entradas por categoria

--- a/less/giornata.less
+++ b/less/giornata.less
@@ -36,7 +36,7 @@ p {
 	height: auto !important;
 }
 
-#post {
+#post, #portadilla {
 	background: url(../img/ruido-fondo-pyxis.png) repeat center;
 }
 .nav-ead {
