--- a/less/giornata.less
+++ b/less/giornata.less
@@ -35,6 +35,9 @@ p {
 .alto-xs {
 	height: auto !important;
 }
+.single .alto-xs {
+	height: 210px !important;
+}
 
 #post, #portadilla {
 	background: url(../img/ruido-fondo-pyxis.png) repeat center;
@@ -46,4 +49,22 @@ p {
 	.fila {
 		clear: both;
 	}
+}
+
+#portada-informacion h2 a, #portada-informacion h3 a, #portada-informacion h4 a, #portada-informacion h5 a, #portada-informacion h6 .title a {
+	font-family: "Open Sans Condensed" !important;
+	color: #282824;
+	font-weight: 700;
+}
+#portada-informacion p.xs {
+	font-size: 13.6px;
+}
+#portada-informacion .entry-details, #portada-informacion .datos-publicacion {
+	color: #A84744;
+	font-family: "Palatino","Source Sans Pro",serif;
+	font-style: italic;
+	font-weight: 300;
+	border-top: 1px solid #C2C4BA;
+	border-bottom: 1px solid #C2C4BA;
+	padding: 5px 0px !important;
 }
