shotcode, botones y plantilla para parallax

--- a/less/giornata.less
+++ b/less/giornata.less
@@ -68,3 +68,6 @@ p {
 	border-bottom: 1px solid #C2C4BA;
 	padding: 5px 0px !important;
 }
+.parallax-image {
+	background-size: cover !important;
+}
