--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
  /*
-Theme Name:		'Gamma 2'
+Theme Name:		Gamma 2
 Theme URI:		http://github.com/eadpucv/gamma2;
-Version:		0.0.1;
+Version:		1.0;
 Author:			.:TIG:. Taller de Investigaciones Gráficas e[ad];
 Author URI:		http://www.ead.pucv.cl;
-Description:	Tema de Wordpress creado con Pyxis para la e[ad] Escuela de Arquitectura y Diseño PUCV
+Description:	Tema de Wordpress creado con Pyxis para la e[ad] Escuela de Arquitectura y Diseño PUCV / desarrollado por http://hugo.solar;
 License:		Artistic License 2.0
 License URI:	http://opensource.org/licenses/Artistic-2.0
 
