Se integra hoja less de estilos Wiki: wiki.less

--- a/less/gamma-assembler.less
+++ b/less/gamma-assembler.less
@@ -51,5 +51,6 @@
 // Incorporación de estilos parametrizados de Gamma
 
 @import '@{pyxis-path}wp.less';						// estilos para bloques en wordpress
+@import '@{pyxis-path}wiki.less';						// estilos para bloques en wordpress
 
 //@import 'giornata.less';
