--- a/css/gamma.css
+++ b/css/gamma.css
@@ -1426,7 +1426,7 @@ nav[role=navigation] li a {
 }
 .nav-busqueda-login input:focus::-webkit-input-placeholder {
   color: #c2c4ba;
-  border-bottom: 1px solid #c2c4ba !important;
+  border-color: 0.9px solid #c2c4ba !important;
   -webkit-transition: 0.2s ease all;
   -moz-transition: 0.2s ease all;
   -o-transition: 0.2s ease all;
@@ -1435,7 +1435,7 @@ nav[role=navigation] li a {
 .nav-busqueda-login input:focus:-moz-placeholder {
   /* Firefox 18- */
   color: #c2c4ba;
-  border-bottom: 1px solid #c2c4ba !important;
+  border-color: 0.9px solid #c2c4ba !important;
   -webkit-transition: 0.2s ease all;
   -moz-transition: 0.2s ease all;
   -o-transition: 0.2s ease all;
@@ -1444,7 +1444,7 @@ nav[role=navigation] li a {
 .nav-busqueda-login input:focus::-moz-placeholder {
   /* Firefox 19+ */
   color: #c2c4ba;
-  border-bottom: 1px solid #c2c4ba !important;
+  border-color: 0.9px solid #c2c4ba !important;
   -webkit-transition: 0.2s ease all;
   -moz-transition: 0.2s ease all;
   -o-transition: 0.2s ease all;
@@ -1452,7 +1452,7 @@ nav[role=navigation] li a {
 }
 .nav-busqueda-login input:focus:-ms-input-placeholder {
   color: #c2c4ba;
-  border-bottom: 1px solid #c2c4ba !important;
+  border-color: 0.9px solid #c2c4ba !important;
   -webkit-transition: 0.2s ease all;
   -moz-transition: 0.2s ease all;
   -o-transition: 0.2s ease all;
@@ -1461,6 +1461,7 @@ nav[role=navigation] li a {
 .nav-busqueda-login a {
   *zoom: 1;
   float: right;
+  margin-top: -1px;
 }
 .nav-busqueda-login a:before,
 .nav-busqueda-login a:after {
@@ -1469,6 +1470,9 @@ nav[role=navigation] li a {
 }
 .nav-busqueda-login a:after {
   clear: both;
+}
+.nav-busqueda-login a i {
+  font-size: 13px;
 }
 .nav-busqueda-login a span {
   font-size: 11.5px;
