--- a/css/gamma.css
+++ b/css/gamma.css
@@ -1369,62 +1369,82 @@ nav[role=navigation] li a {
 .nav > li > a > img {
   max-width: none;
 }
-.nav-busqueda-login {
+.nav-login {
   background-color: rgba(236, 238, 230, 0.8);
   position: absolute;
+  border-top: 2px solid #a84744;
   top: -25px;
-  right: 0;
+  right: 0px;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   padding: 2px 6px 4px 6px;
-  float: right;
+  float: left;
 }
-.nav-busqueda-login input {
+.nav-login a {
   float: right;
+  *zoom: 1;
+  float: left;
+  margin-top: -1px;
+}
+.nav-login a:before,
+.nav-login a:after {
+  display: table;
+  content: "";
+}
+.nav-login a:after {
+  clear: both;
+}
+.nav-login a i {
+  font-size: 13px;
+}
+.nav-login a span {
+  font-size: 11.5px;
+}
+.nav-busqueda {
+  max-width: 150px;
+  margin: 10px 0;
+  float: right;
+  padding: 0px;
+}
+.nav-busqueda input {
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
   background-color: transparent;
   border-color: transparent !important;
   border-bottom: 1px solid rgba(194, 196, 186, 0.45) !important;
-  width: 120px !important;
-  margin-top: 1px !important;
-  margin-right: 10px !important;
   margin-bottom: 0 !important;
-  padding: 0 !important;
-  font-size: 11.5px !important;
+  padding: 6px !important;
+  font-size: 14px !important;
   -webkit-transition: 0.2s ease all;
   -moz-transition: 0.2s ease all;
   -o-transition: 0.2s ease all;
   transition: 0.2s ease all;
-  text-align: right;
 }
-.nav-busqueda-login input::-webkit-input-placeholder {
+.nav-busqueda input::-webkit-input-placeholder {
   color: rgba(194, 196, 186, 0.6);
-  text-align: right;
 }
-.nav-busqueda-login input:-moz-placeholder {
+.nav-busqueda input:-moz-placeholder {
   /* Firefox 18- */
   color: rgba(194, 196, 186, 0.6);
-  text-align: right;
 }
-.nav-busqueda-login input::-moz-placeholder {
+.nav-busqueda input::-moz-placeholder {
   /* Firefox 19+ */
   color: rgba(194, 196, 186, 0.6);
-  text-align: right;
 }
-.nav-busqueda-login input:-ms-input-placeholder {
+.nav-busqueda input:-ms-input-placeholder {
   color: rgba(194, 196, 186, 0.6);
-  text-align: right;
 }
-.nav-busqueda-login input:focus {
+.nav-busqueda input:focus {
   box-shadow: none !important;
   outline: 0 !important;
   color: #575851;
-  background-color: transparent !important;
+  background-color: rgba(236, 238, 230, 0.8) !important;
   -webkit-transition: 0.2s ease all;
   -moz-transition: 0.2s ease all;
   -o-transition: 0.2s ease all;
   transition: 0.2s ease all;
 }
-.nav-busqueda-login input:focus::-webkit-input-placeholder {
+.nav-busqueda input:focus::-webkit-input-placeholder {
   color: #c2c4ba;
   border-color: 0.9px solid #c2c4ba !important;
   -webkit-transition: 0.2s ease all;
@@ -1432,7 +1452,7 @@ nav[role=navigation] li a {
   -o-transition: 0.2s ease all;
   transition: 0.2s ease all;
 }
-.nav-busqueda-login input:focus:-moz-placeholder {
+.nav-busqueda input:focus:-moz-placeholder {
   /* Firefox 18- */
   color: #c2c4ba;
   border-color: 0.9px solid #c2c4ba !important;
@@ -1441,7 +1461,7 @@ nav[role=navigation] li a {
   -o-transition: 0.2s ease all;
   transition: 0.2s ease all;
 }
-.nav-busqueda-login input:focus::-moz-placeholder {
+.nav-busqueda input:focus::-moz-placeholder {
   /* Firefox 19+ */
   color: #c2c4ba;
   border-color: 0.9px solid #c2c4ba !important;
@@ -1450,7 +1470,7 @@ nav[role=navigation] li a {
   -o-transition: 0.2s ease all;
   transition: 0.2s ease all;
 }
-.nav-busqueda-login input:focus:-ms-input-placeholder {
+.nav-busqueda input:focus:-ms-input-placeholder {
   color: #c2c4ba;
   border-color: 0.9px solid #c2c4ba !important;
   -webkit-transition: 0.2s ease all;
@@ -1458,23 +1478,23 @@ nav[role=navigation] li a {
   -o-transition: 0.2s ease all;
   transition: 0.2s ease all;
 }
-.nav-busqueda-login a {
+.nav-busqueda a {
   *zoom: 1;
   float: right;
   margin-top: -1px;
 }
-.nav-busqueda-login a:before,
-.nav-busqueda-login a:after {
+.nav-busqueda a:before,
+.nav-busqueda a:after {
   display: table;
   content: "";
 }
-.nav-busqueda-login a:after {
+.nav-busqueda a:after {
   clear: both;
 }
-.nav-busqueda-login a i {
+.nav-busqueda a i {
   font-size: 13px;
 }
-.nav-busqueda-login a span {
+.nav-busqueda a span {
   font-size: 11.5px;
 }
 .nav-tabs {
@@ -1793,6 +1813,27 @@ footer ul li {
   .nav-pills > li + li {
     margin-left: 0px;
   }
+  .nav > li > a {
+    font-size: 14px;
+    position: relative;
+    display: block;
+    padding: 12px 3px 10px 0;
+  }
+  .nav-busqueda {
+    max-width: 80px;
+    margin-top: 6px;
+  }
+}
+@media (min-width: 992px) and (max-width: 1444px) {
+  .nav > li > a {
+    position: relative;
+    display: block;
+    padding: 10px 5px 10px 0;
+  }
+  .nav-busqueda {
+    margin-top: 6px;
+    max-width: 110px;
+  }
 }
 @media (min-width: 1445px) {
   .nav-pills {
@@ -1818,6 +1859,9 @@ footer ul li {
   }
 }
 @media (min-width: 1445px) {
+  .nav-busqueda {
+    max-width: 150px;
+  }
   .logo-pyxis a img {
     width: 1.4vw;
   }
@@ -3144,7 +3188,6 @@ footer #mapa img {
     padding: 15px 20px !important;
   }
   #sidebar {
-    background-color: #ffffff;
     padding: 20px 0 !important;
   }
   #sidebar ul li,
@@ -8741,6 +8784,41 @@ form.buscador input[type=submit] {
   display: inline-table;
   vertical-align: super !important;
 }
+.searchform {
+  border: none;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  background-color: rgba(236, 238, 230, 0.8);
+}
+.searchform .screen-reader-text {
+  color: #c2c4ba;
+}
+.searchform #s {
+  background-color: rgba(255, 255, 255, 0.4);
+  border-color: #c2c4ba;
+}
+.searchform #s:focus {
+  -webkit-transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -o-transition: 0.2s ease all;
+  transition: 0.2s ease all;
+  background-color: #fff;
+  box-shadow: none !important;
+  outline: 0 !important;
+  color: #575851;
+}
+.searchform #searchsubmit {
+  float: right;
+}
+.searchform input[type='submit'] {
+  color: #c2c4ba;
+  box-shadow: none;
+  text-shadow: none;
+}
+.searchform input[type='submit']:hover {
+  color: #575851;
+  border-color: #575851;
+}
 .grupo-formulario span,
 .form-group span {
   margin: 0;
@@ -10582,6 +10660,7 @@ tbody.collapse.in {
   border-top-right-radius: 0;
   border-top-left-radius: 0;
   box-shadow: none;
+  border-top: 2px solid #a84744;
   width: 100%;
 }
 #index .evento .fecha span,
@@ -10593,6 +10672,10 @@ tbody.collapse.in {
   color: #282824;
   text-align: center;
   padding: 5px;
+}
+#index .evento .fecha span,
+#tag .evento .fecha span {
+  margin: auto;
 }
 #index .evento .contenido,
 #tag .evento .contenido,
@@ -10700,6 +10783,10 @@ tbody.collapse.in {
   -moz-transition: 0.2s ease all;
   -o-transition: 0.2s ease all;
   transition: 0.2s ease all;
+}
+#index .evento:hover .fecha,
+#tag .evento:hover .fecha {
+  background-color: #eceee6;
 }
 #index .publicacion,
 #tag .publicacion {
@@ -11575,6 +11662,7 @@ tbody.collapse.in {
   background-color: rgba(236, 238, 230, 0.8);
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
+  border-top: 2px solid #a84744;
   border-top-right-radius: 0;
   border-top-left-radius: 0;
   display: -webkit-flex;
@@ -11603,6 +11691,7 @@ tbody.collapse.in {
   background-color: rgba(236, 238, 230, 0.8);
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
+  border-top: 2px solid #a84744;
   border-top-right-radius: 0;
   border-top-left-radius: 0;
   display: -webkit-flex;
@@ -11612,10 +11701,12 @@ tbody.collapse.in {
   margin: auto;
 }
 .fecha-movil .dia {
+  font-size: 35px;
   color: #a84744;
   text-align: center;
 }
 .fecha-movil .mes {
+  letter-spacing: 0.5px;
   font-family: 'Open Sans Condensed' !important;
   color: #a84744;
   letter-spacing: 2.5px;
@@ -19709,6 +19800,9 @@ tbody.collapse.in {
     left: 0 !important;
     margin-bottom: 40px;
   }
+  .comment-respond .comment-reply-title {
+    margin-top: 0;
+  }
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .wrap,
@@ -20049,17 +20143,14 @@ td.nombre {
 /* para la Plantilla: Ficha Personal _______________________________________________________ */
 .ficha-personal {
   display: inline-block;
-  margin-bottom: 20px;
-}
-.ficha-personal:nth-of-type(odd) {
-  clear: both;
+  margin-bottom: 35px;
 }
 .ficha-personal .foto {
-  width: 150px;
+  width: 135px;
   height: 100%;
   float: left;
   overflow: hidden;
-  max-height: 150px;
+  max-height: 135px;
   margin-right: 10px;
 }
 .ficha-personal .foto a {
@@ -20100,6 +20191,7 @@ td.nombre {
 }
 /* Fragmento/bloque inserto desde la Wiki _____________________________________ */
 .wikiembed-fragment {
+  width: 100%;
   display: inline-block;
 }
 .wiki-embed-source {
@@ -20115,4 +20207,24 @@ td.nombre {
   height: 35px !important;
   margin-bottom: 10px;
   color: rgba(153, 153, 153, 0.5);
+}
+@media (max-width: 767px) {
+  .ficha-personal {
+    border: 1px solid green;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .ficha-personal {
+    border: 1px solid yellow;
+  }
+}
+@media (min-width: 992px) and (max-width: 1444px) {
+  .ficha-personal:nth-of-type(odd) {
+    clear: both;
+  }
+}
+@media (min-width: 1445px) {
+  .ficha-personal:nth-of-type(3n+4) {
+    clear: both;
+  }
 }
