--- a/less/gamma-assembler.less
+++ b/less/gamma-assembler.less
@@ -1,6 +1,6 @@
 
 // @pyxis-path: '../bower_components/pyxis/less/';
-@pyxis-path: '../bower_components/pyxis/less/'; // Ruta Pyxis local
+@pyxis-path: '../../../../../pyxis/less/'; // Ruta Pyxis local
 @stampa-path: '../bower_components/stampa/less/';
 
 /* 
