fondo para el carrusel de portada

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI:		http://github.com/eadpucv/gamma2;
 Version:		1.0;
 Author:			.:TIG:. Taller de Investigaciones Gráficas e[ad];
 Author URI:		http://www.ead.pucv.cl;
-Description:	Tema de Wordpress creado con Pyxis para la e[ad] Escuela de Arquitectura y Diseño PUCV / desarrollado por http://hugo.solar;
+Description:	Tema de Wordpress creado con Pyxis para la e[ad] Escuela de Arquitectura y Diseño PUCV / diseñado y desarrollado por Hugo Solar, Idar González y Juan Antonio Godoy
 License:		Artistic License 2.0
 License URI:	http://opensource.org/licenses/Artistic-2.0
 
