--- a/css/gamma.css
+++ b/css/gamma.css
@@ -20294,6 +20294,109 @@ tbody.collapse.in {
 .widget_search .nav-busqueda input:-ms-input-placeholder {
   color: #c2c4ba;
 }
+.widget-sin-busqueda {
+  position: relative;
+}
+.widget-sin-busqueda h1,
+.widget-sin-busqueda h2,
+.widget-sin-busqueda h3,
+.widget-sin-busqueda h4,
+.widget-sin-busqueda h5,
+.widget-sin-busqueda h6 {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  margin-left: -122px;
+}
+.widget-sin-busqueda p,
+.widget-sin-busqueda a,
+.widget-sin-busqueda span {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  margin-left: -122px;
+}
+.busqueda-ancha {
+  margin: 40px auto 80px auto !important;
+  background-color: transparent;
+  width: 80%;
+}
+.busqueda-ancha p {
+  margin-top: 10px;
+  text-align: center;
+  font-style: italic;
+  color: #999999;
+  font-family: 'Palatino', 'Times New Roman', Times, 'georgia', serif;
+}
+.busqueda-ancha input[type="text"] {
+  margin-bottom: 0;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
+  background-color: #fff;
+  border: 1px solid rgba(194, 196, 186, 0.5) !important;
+  border-bottom: 2px solid rgba(194, 196, 186, 0.5) !important;
+}
+.busqueda-ancha input[type="text"]::-webkit-input-placeholder {
+  color: #c2c4ba;
+}
+.busqueda-ancha input[type="text"]:-moz-placeholder {
+  /* Firefox 18- */
+  color: #c2c4ba;
+}
+.busqueda-ancha input[type="text"]::-moz-placeholder {
+  /* Firefox 19+ */
+  color: #c2c4ba;
+}
+.busqueda-ancha input[type="text"]:-ms-input-placeholder {
+  color: #c2c4ba;
+}
+.busqueda-ancha input[type="text"]:focus {
+  box-shadow: none !important;
+  outline: 0 !important;
+  color: #282824;
+  background-color: #fff !important;
+  border-bottom: 2px solid #a84744 !important;
+  -webkit-transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -o-transition: 0.2s ease all;
+  transition: 0.2s ease all;
+}
+.busqueda-ancha input[type="text"]:focus::-webkit-input-placeholder {
+  color: #575851;
+  border-color: 0.9px solid #575851 !important;
+  -webkit-transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -o-transition: 0.2s ease all;
+  transition: 0.2s ease all;
+}
+.busqueda-ancha input[type="text"]:focus:-moz-placeholder {
+  /* Firefox 18- */
+  color: #575851;
+  border-color: 0.9px solid #575851 !important;
+  -webkit-transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -o-transition: 0.2s ease all;
+  transition: 0.2s ease all;
+}
+.busqueda-ancha input[type="text"]:focus::-moz-placeholder {
+  /* Firefox 19+ */
+  color: #575851;
+  border-color: 0.9px solid #575851 !important;
+  -webkit-transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -o-transition: 0.2s ease all;
+  transition: 0.2s ease all;
+}
+.busqueda-ancha input[type="text"]:focus:-ms-input-placeholder {
+  color: #575851;
+  border-color: 0.9px solid #575851 !important;
+  -webkit-transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -o-transition: 0.2s ease all;
+  transition: 0.2s ease all;
+}
 .pag.cf {
   margin-bottom: 16px;
 }
@@ -21060,6 +21163,17 @@ body.admin-bar .ayuda-absolute {
   }
   .widget-post-categories .fila > div {
     width: 100%;
+  }
+  .widget-sin-busqueda {
+    position: relative;
+  }
+  .widget-sin-busqueda h3 {
+    position: absolute;
+    top: 20%;
+    left: 10px;
+    margin-left: 0px;
+    max-width: 90%;
+    font-size: 27px;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
